# ByteBoi-Firmware

./: .gitmodules  ByteBoi-Firmware.ino  CMakeLists.txt  GameInfo.cpp  GameInfo.hpp  README.md
SD/Game1/: game.properties
data/: background.raw.hs  introAnimation.g565.hs  left.raw  right.raw  settings.raw.hs  wheelsonConnect.raw.hs  wheelsonConnectError.raw.hs
data/MainMenu/: bonk.raw  crazyGhosts.raw.hs  invaderz.raw  rocks.raw  snake.raw
data/launcher/: EmptySDcard.raw  SettingsBg.raw.hs  SettingsIcon.raw  battery_0.raw  battery_1.raw  battery_2.raw  battery_3.raw  battery_4.raw  chargingIcon.raw  genericGame.raw  intro.g565.hs  low.raw  mainMenuBg.raw.hs  off.raw  reload.raw
data/launcher/Logo/: BBLogo.raw
data/launcher/intro/: intro.aac  intro.g565.hs
data/launcher/stock/: NoSD.raw  load.raw  noIcon.raw
src/: DescriptionModal.cpp  DescriptionModal.h  DescriptionModalItem.cpp  DescriptionModalItem.h  ErrorModal.cpp  ErrorModal.h  GameInfo.hpp  GameManager.cpp  GameManager.h  GameScroller.cpp  GameScroller.h  IntroScreen.cpp  IntroScreen.h  Launcher.cpp  Launcher.h  LoadingIndicator.cpp  LoadingIndicator.h  Menu.cpp  Menu.h  Pins.hpp  SDChecker.cpp  SDChecker.h  SD_OTA.cpp  SD_OTA.h  Splash.cpp  Splash.h
src/BatteryPopup/: BatteryPopupService.cpp  BatteryPopupService.h  ShutdownPopup.cpp  ShutdownPopup.h  WarningPopup.cpp  WarningPopup.h
src/Bitmaps/: settingsIcon.hpp
src/Elements/: GameImage.cpp  GameImage.h  GameTitle.cpp  GameTitle.h  Logo.cpp  Logo.h  Switch.cpp
src/Fonts/: adobex11font.c  adobex11font.h
src/GameManagement/: GameListener.hpp  GameLoader.cpp  GameLoader.h  GameManager.cpp  GameManager.h
src/JigHWTest/: HWTestChecksums.hpp  JigHWTest.cpp  JigHWTest.h  SDSizes.hpp  SPIFFSChecksums.hpp
src/Services/: BatteryService.cpp  SleepService.cpp
src/Settings/: BooleanElement.cpp  BooleanElement.h  DiscreteSlider.cpp  DiscreteSlider.h  SettingsElement.cpp  SettingsElement.h  SettingsScreen.cpp  SettingsScreen.h  SliderElement.cpp  SliderElement.h  TextElement.cpp  TextElement.h
src/SettingsMenu/: GameInfo.hpp  SettingsMenu.cpp  SettingsMenu.h
src/SettingsMenu/Elements/: BoolSettingElement.cpp  BoolSettingElement.h  NumericSettingElement.cpp  NumericSettingElement.h
src/UserHWTest/: BtnTestElement.cpp  BtnTestElement.h  HWTestPart.cpp  HWTestPart.h  InputHWTest.cpp  InputHWTest.h  LEDHWTest.cpp  LEDHWTest.h  SDcardHWTest.cpp  SDcardHWTest.h  SoundHWTest.cpp  SoundHWTest.h  UserHWTest.cpp  UserHWTest.h
